# antsim

./: .gitignore  CLAUDE.md  CONSTRAINTS.md  Cargo.toml  Cargo_broken.toml  MORNING_PROGRESS_REPORT.md  SESSION_SUMMARY.md  convert_to_video.bat  convert_to_video.sh  create_test_pngs.py  generation_history.json  generation_info.json  run_simulation.bat  run_simulation.ps1  run_simulation.sh  test_automation.ps1  test_png.rs
src/: colors.rs  components.rs  config.rs  create_test_frames.rs  main.rs  main_broken.rs  pheromones.rs  png_test.rs  systems.rs  systems_backup.rs  video.rs
